# accparser

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  OPENACC_3_4_IMPLEMENTATION.md  README.md  ROUP_GAPS_ANALYSIS.md  acc_demo.cpp  acc_roundtrip.cpp  test_openacc_vv.sh
.github/workflows/: accparser.yml  codex-after-ci.yml
src/: OpenACCASTConstructor.cpp  OpenACCASTConstructor.h  OpenACCIR.cpp  OpenACCIR.h  OpenACCIRToString.cpp  OpenACCKinds.h  OpenACCParser.h  acclexer.g4  accparser.g4
tests/: CMakeLists.txt  acc_roundtrip.cpp  acc_tester.cpp  compat_caller.cpp  extract_openacc_vv_pragmas.sh  lang_flag_test.cpp  preprocess.cpp  test_openacc_vv.sh  test_single_pragma.sh
tests/base/reference/: ref_cache.txt  ref_data.txt  ref_data_fortran.txt  ref_declare.txt  ref_declare_fortran.txt  ref_enter_data.txt  ref_enter_data_fortran.txt  ref_exit_data.txt  ref_exit_data_fortran.txt  ref_host_data.txt  ref_host_data_fortran.txt  ref_init.txt  ref_kernels.txt  ref_kernels_fortran.txt  ref_kernels_loop.txt  ref_kernels_loop_fortran.txt  ref_loop.txt  ref_loop_fortran.txt  ref_parallel.txt  ref_parallel_fortran.txt  ref_parallel_loop.txt  ref_parallel_loop_fortran.txt  ref_routine.txt  ref_serial.txt  ref_serial_fortran.txt  ref_serial_loop.txt  ref_serial_loop_fortran.txt  ref_set_fortran.txt
tests/builtin/: CMakeLists.txt  data.txt  data_fortran.txt  gang_whitespace.txt  indirect.txt  keyword_vars.txt  modifier_prefix.txt  parallel.txt  parallel_fortran.txt  routine.txt  routine_fortran.txt
tests/builtin/reference/: ref_cache_fortran.txt  ref_data.txt  ref_data_fortran.txt  ref_declare.txt  ref_declare_fortran.txt  ref_enter_data.txt  ref_enter_data_fortran.txt  ref_exit_data.txt  ref_exit_data_fortran.txt  ref_gang_whitespace.txt  ref_host_data.txt  ref_host_data_fortran.txt  ref_indirect.txt  ref_init_fortran.txt  ref_kernels.txt  ref_kernels_fortran.txt  ref_kernels_loop.txt  ref_kernels_loop_fortran.txt  ref_loop.txt  ref_loop_fortran.txt  ref_parallel.txt  ref_parallel_fortran.txt  ref_parallel_loop.txt  ref_parallel_loop_fortran.txt  ref_routine.txt  ref_routine_fortran.txt  ref_serial.txt  ref_serial_fortran.txt  ref_serial_loop.txt  ref_serial_loop_fortran.txt  ref_set.txt  ref_set_fortran.txt  ref_shutdown.txt  ref_shutdown_fortran.txt  ref_update.txt  ref_update_fortran.txt  ref_wait.txt  ref_wait_fortran.txt
tests/openacc_vv/: acc_async_test.c  acc_async_test_all.c  acc_attach.c  acc_copyin.c  acc_copyin_async.c  acc_copyin_async.cpp  acc_copyout.cpp  acc_copyout_async.c  acc_copyout_finalize.cpp  acc_copyout_finalize_async.cpp  acc_create.c  acc_create.cpp  acc_create_async.c  acc_delete.c  acc_delete_async.cpp  acc_delete_finalize.c  acc_delete_finalize_async.c  acc_delete_finalize_async.cpp  acc_detach.c  acc_deviceptr.cpp  acc_get_default_async.c  acc_is_present.c  acc_memcpy_d2d.cpp  acc_memcpy_device.cpp  acc_memcpy_from_device.c  acc_memcpy_from_device_async.c  acc_memcpy_to_device.c  acc_memcpy_to_device_async.cpp  acc_on_device.cpp  acc_set_default_async.cpp  acc_set_device_num.cpp  acc_unmap_data.c  acc_update_device.cpp  acc_update_device_async.cpp  acc_update_self.c  acc_update_self_async.cpp  acc_wait.c  acc_wait_all.cpp  acc_wait_all_async.cpp  acc_wait_any.c  (+292 more)
utils/: acc_demo.cpp
